# gpu-computing-materials

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  batchnorm.html  blob.html  changelog.html  config.h.in  cuda.html  data_utils.html  genindex.html  index.html  install-apt.sh  leakcheck.cpp  memory.html  mkl.html  objects.inv  resnet.txt  search.html  searchindex.js  tensor.html
_sources/: changelog.rst.txt  cuda.rst.txt  index.rst.txt  memory.rst.txt  mkl.rst.txt  tensor.rst.txt
bench/: CMakeLists.txt  HOWTO.md  bench_conv.cpp  bench_conv_cudnn.cpp  bench_conv_device.cpp  bench_net_hybrid.cpp  bench_net_resnet.cpp  bench_resnet_hybrid.cpp
caffe-models/: readme.md  resnet14_cifar.prototxt  resnet_cifar.prototxt  resnet_cifar_nnpack.prototxt  vggnet_simple.prototxt
data/cifar10/: get_cifar10.sh
docs/: meeting-note-Jan-20.md  presentation_1_outline.md  presentation_2_outline.md  project_discuss_1.md  project_discuss_2.md  project_discuss_4.md  readme.gpu-computing.md
docs/gpu-computing-19/: NOTES.md  presentation_2_outline.md  presentation_5.md  project_discuss_2.md  project_discuss_3.md
docs/source/: batchnorm.rst  blob.rst  changelog.rst  conf.py  data_utils.rst  devlog.md  index.rst  memory.rst  mkl.rst
docs/source/layers/: conv.rst  pool.rst
examples/: nnpack.howto
examples/mnistCUDNN/: CMakeLists.txt
examples/python_backward/: backward.py
examples/python_backward/test_backward/: cache.py  fast_layers.py  numerical.py  test_backward.py
examples/python_forward/: forward.py
examples/python_forward/tests/: test_conv_forward_im2col.py
include/: common.h  cuda_defs.h  layer_conv.h  layer_sandwich.c  tensor.h  test_util.h
include/awnn/: channel.h  common.h  data_utils.h  im2col.h  layer.h  layer_conv.h  layer_cudnn.h  layer_fc.h  layer_pool.h  layer_relu.h  layer_sandwich.h  logging.h  loss_softmax.h  memory.h  net.h  net_mlp.h  net_resnet.h  solver.h  tensor.h  weight_init.h
include/awnndevice/: cublas_utils.cuh  cublas_wrappers.cuh  dev_layer_conv.cuh  device_utils.cuh  device_utils_harness.cuh  device_utils_host_harness.cuh  layer_conv.cuh  layer_conv_device.cuh  layer_pool.cuh  layer_sandwich_device.cuh  memory.cuh  range.cuh  tensor.cuh
include/utils/: data_cifar.h  debug.h  list.h  weight_init.h
layers/: conv.html  pool.html
models/: resnet_cifar.prototxt
scripts/: awnn_skx_serial.job  build_gibson_release.sh  build_sievert.sh  build_stampede2.sh  intelcaffe_skx_serial.job  stampede2_resnet8_cifar.prototxt
src/: CMakeLists.txt  cublas_utils.cu  im2col.c  layer_conv.c  layer_conv.cu  layer_conv_cudnn.cu  layer_conv_nnpack.c  layer_conv_per_img.c  layer_fc.c  layer_pool.c  layer_pool.cu  layer_relu.c  layer_sandwich.c  loss_softmax.c  memory.c  net.c  net_mlp.c  net_resnet.c  solver.c  tensor.c  tensor.cu  tensor_op.c  weight_init.c
src-device/: cublas_wrappers.cu  dev_layer_conv.cu  device_utils_harness.cu  device_utils_host_harness.cu  layer_conv.cu  layer_conv_device.cu  layer_pool.cu  layer_sandwich_device.cu  memory.cu  tensor.cu
src/awnn/: CMakeLists.txt  layer_common.cpp  layer_common.hpp  resnet.cpp  resnet_hybrid.cpp  vggnet.cpp
src/layers/: CMakeLists.txt  layer_common.cpp  layer_common.hpp  parallel.cpp  parallel.hpp  resnet.cpp  resnet_hybrid.cpp  vggnet.cpp
tests/: CMakeLists.txt  bench_conv_device.cpp  test_cublas_device_op.cpp  test_data_cifar.cpp  test_device_utils.cpp  test_dim.cpp  test_dtype_list.cpp  test_layer_conv.c  test_layer_conv.cpp  test_layer_conv_cudnn.cpp  test_layer_conv_device.cpp  test_layer_conv_device_speed.cpp  test_layer_conv_nnpack.cpp  test_layer_conv_perimg.cpp  test_layer_conv_uneven.cpp  test_layer_fc.cpp  test_layer_pool.cpp  test_layer_relu.cpp  test_layer_sandwich.cpp  test_loss_softmax.cpp  test_mem_op_device.cpp  test_net_mlp.cpp  test_net_mlp_cifar.cpp  test_net_resnet.cpp  test_net_resnet14.cpp  test_net_resnet_cifar.cpp  test_net_resnet_mem.cpp  test_numa.cpp  test_resblock_device.cpp  test_skeleton.cpp  test_solver.cpp  test_tensor.cpp  test_tensor_op.cpp  test_utility.cpp
tests/layers/: CMakeLists.txt  test_layers.cpp  test_topology.cpp
utils/: data_cifar.cpp  debug.cpp  weight_init.cpp
