if(USE_CUDA)
  add_executable(bench-conv-device bench_conv_device.cpp)
  target_link_libraries(bench-conv-device ${AWNN_LIBS} ${AWNN_DEVICE_LIBS} cudart cublas gtest)
  add_test(bench-conv-device bench-conv-device)
  if(USE_CUDNN)
    add_executable(bench-conv-cudnn bench_conv_cudnn.cpp)
    target_link_libraries(bench-conv-cudnn ${AWNN_LIBS}  ${AWNN_DEVICE_LIBS} gtest)
    add_test(bench-conv-cudnn bench-conv-cudnn)
  endif(USE_CUDNN)
endif(USE_CUDA)
add_executable(bench-net-resnet bench_net_resnet.cpp)
target_link_libraries(bench-net-resnet ${AWNN_LIBS} gtest)
add_test(bench-net-resnet bench-net-resnet)

if(USE_MKL)
add_executable(bench-conv bench_conv.cpp)
target_compile_options(bench-conv PRIVATE "-qopenmp")
target_link_options(bench-conv PRIVATE "-qopenmp") #other wise mkl-internal threading will be used.
target_link_libraries(bench-conv ${AWNN_LIBS} gtest)
add_test(bench-conv bench-conv)
endif()
