if(USE_CUDA)
  add_executable(bench-conv-device bench_conv_device.cpp)
  target_link_libraries(bench-conv-device ${AWNN_LIBS} ${AWNN_DEVICE_LIBS} cudart cublas gtest)
  add_test(bench-conv-device bench-conv-device)
  if(USE_CUDNN)
    add_executable(bench-conv-cudnn bench_conv_cudnn.cpp)
    target_link_libraries(bench-conv-cudnn ${AWNN_LIBS}  ${AWNN_DEVICE_LIBS} gtest)
    add_test(bench-conv-cudnn bench-conv-cudnn)
  endif(USE_CUDNN)
endif(USE_CUDA)
add_executable(bench-net-resnet bench_net_resnet.cpp)
target_link_libraries(bench-net-resnet awnn_layers ${AWNN_LIBS} gtest )
add_test(bench-net-resnet bench-net-resnet)

add_executable(bench-resnet-hybrid bench_resnet_hybrid.cpp)
target_link_libraries(bench-resnet-hybrid awnn_layers ${AWNN_LIBS} gtest )
add_test(bench-resnet-hybrid bench-resnet-hybrid)


if(USE_MKL)
add_executable(bench-conv bench_conv.cpp)
target_link_libraries(bench-conv ${AWNN_LIBS} gtest iomp5)
add_test(bench-conv bench-conv)
endif()
