if(USE_CUDA)
  add_executable(bench-conv-device bench_conv_device.cpp)
  target_link_libraries(bench-conv-device ${AWNN_LIBS} ${AWNN_DEVICE_LIBS} cudart cublas gtest)
  add_test(bench-conv-device bench-conv-device)
  if(USE_CUDNN)
    add_executable(bench-conv-cudnn bench_conv_cudnn.cpp)
    target_link_libraries(bench-conv-cudnn ${AWNN_LIBS}  ${AWNN_DEVICE_LIBS} gtest)
    add_test(bench-conv-cudnn bench-conv-cudnn)
  endif(USE_CUDNN)
endif(USE_CUDA)
add_executable(bench-net-resnet bench_net_resnet.cpp)
target_link_libraries(bench-net-resnet awnn_layers ${AWNN_LIBS} gtest )
add_test(bench-net-resnet bench-net-resnet COMMAND 128 2 3)

add_executable(bench-net-hybrid bench_net_hybrid.cpp)
target_link_libraries(bench-net-hybrid awnn_layers ${AWNN_LIBS} gtest )
add_test(bench-net-hybrid-resnet bench-net-hybrid COMMAND resnet 128 2 3)
add_test(bench-net-hybrid-vggnet bench-net-hybrid COMMAND vggnet 128 2 3)

if(USE_MKL)
add_executable(bench-conv bench_conv.cpp)
target_link_libraries(bench-conv ${AWNN_LIBS} gtest iomp5)
add_test(bench-conv bench-conv)
endif()
